<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_gauge_options"
        android:title="@string/gauge_options" >
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="-1"
            android:key="logo_color"
            android:title="@string/logo_color" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_bike_options"
        android:title="@string/bike_options" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="units"
            android:switchTextOff="KPH"
            android:switchTextOn="MPH"
            android:title="@string/units" />

        <EditTextPreference
            android:defaultValue="5"
            android:key="odometer"
            android:summary="@string/odometer_summary"
            android:title="@string/odometer" />
    </PreferenceCategory>
</PreferenceScreen>